member api initial CRUD
