# server/controller/members.go
@@ -3,11 +3,34 @@ package controller
 import (
 	"coders/httputil"
 	"coders/model"
+
+	"gorm.io/gorm"
 	"net/http"
 	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
+
+// ListMembers godoc
+// @Summary List Members
+// @Description get Members
+// @Tags Members
+// @Accept  json
+// @Produce  json
+// @Success 200 {array} model.Member
+// @Failure 400 {object} httputil.HTTPError
+// @Failure 404 {object} httputil.HTTPError
+// @Failure 500 {object} httputil.HTTPError
+// @Router /members [get]
+func ListMembers(ctx *gin.Context) {
+	db := ctx.MustGet("db").(*gorm.DB)
+	members, err := model.MembersAll(db)
+	if err != nil {
+		httputil.Error(ctx, http.StatusNotFound, err)
+		return
+	}
+	ctx.JSON(http.StatusOK, members)
+}
 
 // ShowMember godoc
 // @Summary Show an Member
@@ -22,40 +45,19 @@ import (
 // @Failure 500 {object} httputil.HTTPError
 // @Router /members/{id} [get]
 func ShowMember(ctx *gin.Context) {
+	db := ctx.MustGet("db").(*gorm.DB)
 	id := ctx.Param("id")
 	aid, err := strconv.Atoi(id)
 	if err != nil {
 		httputil.Error(ctx, http.StatusBadRequest, err)
 		return
 	}
-	Member, err := model.MemberOne(aid)
+	member, err := model.MemberOne(db, aid)
 	if err != nil {
 		httputil.Error(ctx, http.StatusNotFound, err)
 		return
 	}
-	ctx.JSON(http.StatusOK, Member)
-}
-
-// ListMembers godoc
-// @Summary List Members
-// @Description get Members
-// @Tags Members
-// @Accept  json
-// @Produce  json
-// @Param q query string false "name search by q" Format(email)
-// @Success 200 {array} model.Member
-// @Failure 400 {object} httputil.HTTPError
-// @Failure 404 {object} httputil.HTTPError
-// @Failure 500 {object} httputil.HTTPError
-// @Router /members [get]
-func ListMembers(ctx *gin.Context) {
-	q := ctx.Request.URL.Query().Get("q")
-	Members, err := model.MembersAll(q)
-	if err != nil {
-		httputil.Error(ctx, http.StatusNotFound, err)
-		return
-	}
-	ctx.JSON(http.StatusOK, Members)
+	ctx.JSON(http.StatusOK, member)
 }
 
 // AddMember godoc
@@ -64,33 +66,36 @@ func ListMembers(ctx *gin.Context) {
 // @Tags Members
 // @Accept  json
 // @Produce  json
-// @Param Member body model.AddMember true "Add Member"
+// @Param Member body model.EditMember true "Add Member"
 // @Success 200 {object} model.Member
 // @Failure 400 {object} httputil.HTTPError
 // @Failure 404 {object} httputil.HTTPError
 // @Failure 500 {object} httputil.HTTPError
 // @Router /members [post]
 func AddMember(ctx *gin.Context) {
-	var addMember model.AddMember
-	if err := ctx.ShouldBindJSON(&addMember); err != nil {
+	db := ctx.MustGet("db").(*gorm.DB)
+
+	var req model.EditMember
+	if err := ctx.ShouldBindJSON(&req); err != nil {
 		httputil.Error(ctx, http.StatusBadRequest, err)
 		return
 	}
-	if err := addMember.Validation(); err != nil {
+	if err := req.Validation(); err != nil {
 		httputil.Error(ctx, http.StatusBadRequest, err)
 		return
 	}
-	Member := model.Member{
-		Name: addMember.Name,
+
+	member := model.Member{
+		Name: req.Name,
 	}
-	lastID, err := Member.Insert()
+	result, err := model.Insert(db, member)
 	if err != nil {
 		httputil.Error(ctx, http.StatusBadRequest, err)
 		return
 	}
-	Member.ID = lastID
-	ctx.JSON(http.StatusOK, Member)
+	ctx.JSON(http.StatusOK, result)
 }
+
 
 // UpdateMember godoc
 // @Summary Update an Member
@@ -99,34 +104,37 @@ func AddMember(ctx *gin.Context) {
 // @Accept  json
 // @Produce  json
 // @Param  id path int true "Member ID"
-// @Param  Member body model.UpdateMember true "Update Member"
+// @Param  Member body model.EditMember true "Update Member"
 // @Success 200 {object} model.Member
 // @Failure 400 {object} httputil.HTTPError
 // @Failure 404 {object} httputil.HTTPError
 // @Failure 500 {object} httputil.HTTPError
 // @Router /members/{id} [patch]
 func UpdateMember(ctx *gin.Context) {
+	db := ctx.MustGet("db").(*gorm.DB)
 	id := ctx.Param("id")
 	aid, err := strconv.Atoi(id)
 	if err != nil {
 		httputil.Error(ctx, http.StatusBadRequest, err)
 		return
 	}
-	var updateMember model.UpdateMember
-	if err := ctx.ShouldBindJSON(&updateMember); err != nil {
+
+	var req model.EditMember
+	if err := ctx.ShouldBindJSON(&req); err != nil {
 		httputil.Error(ctx, http.StatusBadRequest, err)
 		return
 	}
-	Member := model.Member{
+
+	member := model.Member{
 		ID:   aid,
-		Name: updateMember.Name,
+		Name: req.Name,
 	}
-	err = Member.Update()
+	result, err := model.Update(db, member)
 	if err != nil {
 		httputil.Error(ctx, http.StatusNotFound, err)
 		return
 	}
-	ctx.JSON(http.StatusOK, Member)
+	ctx.JSON(http.StatusOK, result)
 }
 
 // DeleteMember godoc
@@ -142,13 +150,14 @@ func UpdateMember(ctx *gin.Context) {
 // @Failure 500 {object} httputil.HTTPError
 // @Router /members/{id} [delete]
 func DeleteMember(ctx *gin.Context) {
+	db := ctx.MustGet("db").(*gorm.DB)
 	id := ctx.Param("id")
 	aid, err := strconv.Atoi(id)
 	if err != nil {
 		httputil.Error(ctx, http.StatusBadRequest, err)
 		return
 	}
-	err = model.Delete(aid)
+	err = model.Delete(db, aid)
 	if err != nil {
 		httputil.Error(ctx, http.StatusNotFound, err)
 		return
